<resources>
    <string name="app_name">Message</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="anupreksha">Anupreksha</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_message">Enter Message</string>
</resources>
