<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp"
    tools:context=".Activities.SignUpActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:onClick="onUserSignUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>