<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_message_black_24dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:onClick="onLogin"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:onClick="onSignUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />


</LinearLayout>